react-app/src/components/BoardGrid/BoardCard.css
#boardCard {
    height: 200px;
    width: 250px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    font-size: 18px;
    font-weight: 700;
    margin-right: 20px  !important;
}


#boardContainer {

    background-color: white;
    height: 180px;
    width: 250px;
    border-radius: 40px;
    overflow: hidden;
    margin-bottom: 10px;
    position: relative;
}


#boardimg {
    width: 100%;
    height: 100%;
    object-fit: cover;
    height: 180px;
}


#editBoardBtn {
    background-color: white;
    height: 30px;
    width: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 15px;
    font-size: 14px;
    position: absolute;
    bottom: 10px;
    right: 20px;
    z-index: 4;
    cursor: pointer;
}

#editBoardBtn:hover {
    background-color: #d3d3d3;
}

